Добавляет секции about и adventure

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Balloons</title>
-    <link rel="stylesheet" href="css/main.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/font-icon.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
@@ -25,12 +28,122 @@
         <div class="header__menu"></div>
       </nav>
       <div class="header__box">
-        <h1 class="title">
-          <span class="title__main">Туры на воздушном шаре</span>
-          <span class="title__subtitle">Незабываемое приключение ждет вас</span>
+        <h1 class="title-first">
+          <span class="title-first__main">Туры на воздушном шаре</span>
+          <span class="title-first__subtitle"
+            >Незабываемое приключение ждет вас</span
+          >
         </h1>
-        <a href="#!" class="btn btn_animated">наш каталог</a>
+        <a href="#!" class="btn btn_animated">Наш каталог</a>
       </div>
     </header>
+
+    <main>
+      <section class="section-about container">
+        <div class="text-center">
+          <h2 class="title-secondary margin-bottom-80px">
+            Невероятное ощущение свободы
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="title-third margin-bottom-10px">
+              Позвольте себе приключение
+            </h3>
+            <p class="paragraph margin-bottom-30px">
+              Задача организации, в особенности же дальнейшее развитие различных
+              форм деятельности влечет за собой процесс внедрениям и
+              модернизации соответствующий условий активизации. Таким образом
+              начало повседневной работы по формированию позиции влечет.
+            </p>
+
+            <h3 class="title-third margin-bottom-10px">
+              Вверх на 6000 метров над уровнем моря
+            </h3>
+            <p class="paragraph margin-bottom-30px">
+              Задача организации, в особенности же дальнейшее развитие различных
+              форм деятельности влечет за собой процесс внедрениям и
+              модернизации соответствующий условий активизации. Таким образом
+              начало повседневной работы по формированию позиции влечет.
+            </p>
+
+            <a href="#!" class="btn-link">Узнать больше &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/balloons-1.jpeg"
+                alt="Hot air balloon image"
+                class="composition__photo composition__photo_b1"
+              />
+              <img
+                src="img/balloons-2.jpeg"
+                alt="Hot air balloon image"
+                class="composition__photo composition__photo_b2"
+              />
+              <img
+                src="img/balloons-3.jpeg"
+                alt="Hot air balloon image"
+                class="composition__photo composition__photo_b3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-adventure">
+        <div class="row container">
+          <div class="col-1-of-4">
+            <div class="adventure-card">
+              <i
+                class="adventure-card__icon icon-earth-icon margin-bottom-30px"
+              ></i>
+              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <p class="paragraph">
+                Задача организации, в особенности же дальнейшее развитие
+                различных в особенности же развитие различных
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="adventure-card">
+              <i
+                class="adventure-card__icon icon-map-icon margin-bottom-30px"
+              ></i>
+              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <p class="paragraph">
+                Задача организации, в особенности же дальнейшее развитие
+                различных в особенности же развитие различных
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="adventure-card">
+              <i
+                class="adventure-card__icon icon-compass-icon margin-bottom-30px"
+              ></i>
+              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <p class="paragraph">
+                Задача организации, в особенности же дальнейшее развитие
+                различных в особенности же развитие различных
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="adventure-card">
+              <i
+                class="adventure-card__icon icon-pointer-icon margin-bottom-30px"
+              ></i>
+              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <p class="paragraph">
+                Задача организации, в особенности же дальнейшее развитие
+                различных в особенности же развитие различных
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
