Добавляет секции отзывов и бронирования

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </section>
 
       <section class="section-adventure">
-        <div class="row container">
+        <div class="row">
           <div class="col-1-of-4">
             <div class="adventure-card">
               <i
@@ -140,6 +140,215 @@
                 Задача организации, в особенности же дальнейшее развитие
                 различных в особенности же развитие различных
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tour">
+        <div class="text-center">
+          <h2 class="title-secondary margin-bottom-80px">
+            Наиболее популярные туры
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="tour-card">
+              <div class="tour-card__side tour-card__side_front">
+                <div class="tour-card__image tour-card__image_1"></div>
+                <h4 class="tour-card__title">
+                  <span>Групповые</span>
+                  <span>туры</span>
+                </h4>
+                <ul class="tour-card__description">
+                  <li>Группы от 6 человек</li>
+                  <li>Продолжительность 2 часа</li>
+                  <li>В группе 1 гид</li>
+                  <li>Дальность полета 6 км</li>
+                  <li>Бесплатные сувениры</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side_back">
+                <p class="tour-card__text tour-card__text_caption">
+                  полная стоимость:
+                </p>
+                <p class="tour-card__text tour-card__text_price">5990&#8381;</p>
+                <a href="#!" class="btn btn_card">Забронировать</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="tour-card">
+              <div class="tour-card__side tour-card__side_front">
+                <div class="tour-card__image tour-card__image_2"></div>
+                <h4 class="tour-card__title">
+                  <span>Частные</span>
+                  <span>туры</span>
+                </h4>
+                <ul class="tour-card__description">
+                  <li>Индивидуальная программа</li>
+                  <li>Продолжительность 3 часа</li>
+                  <li>Сопровождает 1 гид</li>
+                  <li>Дальность полета 9 км</li>
+                  <li>Бесплатные сувениры</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side_back">
+                <p class="tour-card__text tour-card__text_caption">
+                  полная стоимость:
+                </p>
+                <p class="tour-card__text tour-card__text_price">8990&#8381;</p>
+                <a href="#!" class="btn btn_card">Забронировать</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="tour-card">
+              <div class="tour-card__side tour-card__side_front">
+                <div class="tour-card__image tour-card__image_3"></div>
+                <h4 class="tour-card__title">
+                  <span>Смотровые</span>
+                  <span>площадки</span>
+                </h4>
+                <ul class="tour-card__description">
+                  <li>Группы от 6 человек</li>
+                  <li>Продолжительность 2 часа</li>
+                  <li>В группе 1 гид</li>
+                  <li>Дальность полета 6 км</li>
+                  <li>Бесплатные сувениры</li>
+                </ul>
+              </div>
+              <div class="tour-card__side tour-card__side_back">
+                <p class="tour-card__text tour-card__text_caption">
+                  полная стоимость:
+                </p>
+                <p class="tour-card__text tour-card__text_price">5990&#8381;</p>
+                <a href="#!" class="btn btn_card">Забронировать</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="text-center">
+          <a href="#!" class="btn">Забронировать</a>
+        </div>
+      </section>
+
+      <section class="section-feedback">
+        <div class="bg-gradient"></div>
+        <video class="bg-video" loop muted autoplay>
+          <source src="video/hot-air-balloons.mp4" type="video/mp4" />
+          <source src="video/hot-air-balloons.webm" type="video/webm" />
+        </video>
+        <div class="text-center">
+          <h2 class="title-secondary title-secondary_white margin-bottom-80px">
+            Отзывы наших клиентов
+          </h2>
+        </div>
+        <div class="row">
+          <div class="feedback-card block-center margin-bottom-80px">
+            <figure class="feedback-card__image">
+              <img src="img/person-1.jpg" alt="Man" />
+              <figcaption class="feedback-card__name">Антон Рябин</figcaption>
+            </figure>
+            <div class="feedback-card__box">
+              <h3 class="title-third margin-bottom-10px">
+                Я получил массу впечатлений
+              </h3>
+              <p class="paragraph">
+                Задача организации, в особенности же дальнейшее развитие
+                различных форм деятельности влечет за собой процесс внедрениям и
+                модернизации соответствующий условий активизации. Таким образом
+                начало повседневной работы по формированию позиции влечет.
+              </p>
+            </div>
+          </div>
+
+          <div class="feedback-card block-center margin-bottom-80px">
+            <figure class="feedback-card__image">
+              <img src="img/person-2.jpg" alt="Woman" />
+              <figcaption class="feedback-card__name">Лиза Фролова</figcaption>
+            </figure>
+            <div class="feedback-card__box">
+              <h3 class="title-third margin-bottom-10px">
+                Это было великолепно и незабываемо
+              </h3>
+              <p class="paragraph">
+                Задача организации, в особенности же дальнейшее развитие
+                различных форм деятельности влечет за собой процесс внедрениям и
+                модернизации соответствующий условий активизации. Таким образом
+                начало повседневной работы по формированию позиции влечет.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="text-center">
+          <a href="#!" class="btn">Забронировать</a>
+        </div>
+      </section>
+
+      <section class="section-booking">
+        <div class="row">
+          <div class="booking">
+            <div class="booking__form">
+              <div class="text-center">
+                <h2 class="title-secondary margin-bottom-30px">
+                  Забронировать тур
+                </h2>
+              </div>
+              <form class="form" action="#">
+                <div class="form__group">
+                  <input
+                    type="text"
+                    id="name"
+                    class="form__input margin-bottom-10px"
+                    placeholder="Имя Фамилия"
+                    required
+                  />
+                  <label for="name" class="form__label">Имя и Фамилия</label>
+                </div>
+
+                <div class="form__group">
+                  <input
+                    type="email"
+                    id="email"
+                    class="form__input margin-bottom-10px"
+                    placeholder="Почтовый адрес"
+                    required
+                  />
+                  <label for="email" class="form__label">Почтовый адрес</label>
+                </div>
+
+                <div class="form__group">
+                  <div class="form__group-radio margin-bottom-30px">
+                    <input
+                      type="radio"
+                      id="tour-1"
+                      class="form__input-radio"
+                      name="tour"
+                    />
+                    <label for="tour-1" class="form__label-radio">
+                      <span class="form__button-radio"></span>
+                      Групповой тур</label
+                    >
+                  </div>
+                  <div class="form__group-radio">
+                    <input
+                      type="radio"
+                      id="tour-2"
+                      class="form__input-radio"
+                      name="tour"
+                    />
+                    <label for="tour-2" class="form__label-radio">
+                      <span class="form__button-radio margin-left-20px"></span>
+                      Индивидуальный тур</label
+                    >
+                  </div>
+                </div>
+
+                <button href="#!" class="btn btn_accent">Забронировать</button>
+              </form>
             </div>
           </div>
         </div>
