--- a/index.html
+++ b/index.html
@@ -18,15 +18,41 @@
   </head>
 
   <body>
-    <header class="header">
-      <nav class="header__nav">
-        <img
-          class="header__logo"
-          src="icons/icon-logo.svg"
-          alt="Логотип - воздушный шар"
-        />
-        <div class="header__menu"></div>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__toggle" id="nav-toggle" />
+      <label for="nav-toggle" class="navigation__button">
+        <span class="navigation__icon"></span>
+      </label>
+
+      <div class="navigation__background"></div>
+
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a href="#!" class="navigation__link">о нас</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#!" class="navigation__link">скидки</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#!" class="navigation__link">лучшие туры</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#!" class="navigation__link">калькулятор цены</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#!" class="navigation__link">связаться с нами</a>
+          </li>
+        </ul>
       </nav>
+    </div>
+
+    <header class="header">
+      <div class="header__logo">
+        <a href="#!">
+          <img src="icons/icon-logo.svg" alt="Логотип - воздушный шар" />
+        </a>
+      </div>
       <div class="header__box">
         <h1 class="title-first">
           <span class="title-first__main">Туры на воздушном шаре</span>
@@ -354,5 +380,33 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="row">
+        <a href="#!">
+          <img src="icons/icon-logo.svg" alt="Логотип" class="footer__logo" />
+        </a>
+
+        <div class="row">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#!" class="footer__link">о нас</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">скидки</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">лучшие туры</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">калькулятор цены</a>
+            </li>
+            <li class="footer__item">
+              <a href="#!" class="footer__link">связаться с нами</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
