Добавляет медиа-запросы для экранов от 900px до 1200px

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </header>
 
     <main>
-      <section class="section-about container">
+      <section class="section-about">
         <div class="text-center">
           <h2 class="title-secondary margin-bottom-80px">
             Невероятное ощущение свободы
@@ -318,11 +318,10 @@
         <div class="row">
           <div class="booking">
             <div class="booking__form">
-              <div class="text-center">
-                <h2 class="title-secondary margin-bottom-30px">
-                  Забронировать тур
-                </h2>
-              </div>
+              <h2 class="title-secondary margin-bottom-30px">
+                Забронировать тур
+              </h2>
+
               <form class="form" action="#">
                 <div class="form__group">
                   <input
@@ -359,7 +358,7 @@
                       Групповой тур</label
                     >
                   </div>
-                  <div class="form__group-radio">
+                  <div class="form__group-radio margin-bottom-30px">
                     <input
                       type="radio"
                       id="tour-2"
@@ -367,7 +366,7 @@
                       name="tour"
                     />
                     <label for="tour-2" class="form__label-radio">
-                      <span class="form__button-radio margin-left-20px"></span>
+                      <span class="form__button-radio"></span>
                       Индивидуальный тур</label
                     >
                   </div>
