Добавляет адаптив для устройств от 601px до 900px

--- a/index.html
+++ b/index.html
@@ -66,28 +66,30 @@
 
     <main>
       <section class="section-about">
-        <div class="text-center">
-          <h2 class="title-secondary margin-bottom-80px">
-            Невероятное ощущение свободы
-          </h2>
+        <div class="row">
+          <div class="text-center">
+            <h2 class="title-secondary margin-bottom-lg">
+              Невероятное ощущение свободы
+            </h2>
+          </div>
         </div>
 
         <div class="row">
           <div class="col-1-of-2">
-            <h3 class="title-third margin-bottom-10px">
+            <h3 class="title-third margin-bottom-sm">
               Позвольте себе приключение
             </h3>
-            <p class="paragraph margin-bottom-30px">
+            <p class="paragraph margin-bottom-md">
               Задача организации, в особенности же дальнейшее развитие различных
               форм деятельности влечет за собой процесс внедрениям и
               модернизации соответствующий условий активизации. Таким образом
               начало повседневной работы по формированию позиции влечет.
             </p>
 
-            <h3 class="title-third margin-bottom-10px">
+            <h3 class="title-third margin-bottom-sm">
               Вверх на 6000 метров над уровнем моря
             </h3>
-            <p class="paragraph margin-bottom-30px">
+            <p class="paragraph margin-bottom-md">
               Задача организации, в особенности же дальнейшее развитие различных
               форм деятельности влечет за собой процесс внедрениям и
               модернизации соответствующий условий активизации. Таким образом
@@ -123,9 +125,9 @@
           <div class="col-1-of-4">
             <div class="adventure-card">
               <i
-                class="adventure-card__icon icon-earth-icon margin-bottom-30px"
+                class="adventure-card__icon icon-earth-icon margin-bottom-md"
               ></i>
-              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <h3 class="title-third margin-bottom-sm">Приключение</h3>
               <p class="paragraph">
                 Задача организации, в особенности же дальнейшее развитие
                 различных в особенности же развитие различных
@@ -135,9 +137,9 @@
           <div class="col-1-of-4">
             <div class="adventure-card">
               <i
-                class="adventure-card__icon icon-map-icon margin-bottom-30px"
+                class="adventure-card__icon icon-map-icon margin-bottom-md"
               ></i>
-              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <h3 class="title-third margin-bottom-sm">Приключение</h3>
               <p class="paragraph">
                 Задача организации, в особенности же дальнейшее развитие
                 различных в особенности же развитие различных
@@ -147,9 +149,9 @@
           <div class="col-1-of-4">
             <div class="adventure-card">
               <i
-                class="adventure-card__icon icon-compass-icon margin-bottom-30px"
+                class="adventure-card__icon icon-compass-icon margin-bottom-md"
               ></i>
-              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <h3 class="title-third margin-bottom-sm">Приключение</h3>
               <p class="paragraph">
                 Задача организации, в особенности же дальнейшее развитие
                 различных в особенности же развитие различных
@@ -159,9 +161,9 @@
           <div class="col-1-of-4">
             <div class="adventure-card">
               <i
-                class="adventure-card__icon icon-pointer-icon margin-bottom-30px"
+                class="adventure-card__icon icon-pointer-icon margin-bottom-md"
               ></i>
-              <h3 class="title-third margin-bottom-10px">Приключение</h3>
+              <h3 class="title-third margin-bottom-sm">Приключение</h3>
               <p class="paragraph">
                 Задача организации, в особенности же дальнейшее развитие
                 различных в особенности же развитие различных
@@ -172,10 +174,12 @@
       </section>
 
       <section class="section-tour">
-        <div class="text-center">
-          <h2 class="title-secondary margin-bottom-80px">
-            Наиболее популярные туры
-          </h2>
+        <div class="row">
+          <div class="text-center">
+            <h2 class="title-secondary margin-bottom-lg">
+              Наиболее популярные туры
+            </h2>
+          </div>
         </div>
 
         <div class="row">
@@ -267,19 +271,22 @@
           <source src="video/hot-air-balloons.mp4" type="video/mp4" />
           <source src="video/hot-air-balloons.webm" type="video/webm" />
         </video>
-        <div class="text-center">
-          <h2 class="title-secondary title-secondary_white margin-bottom-80px">
-            Отзывы наших клиентов
-          </h2>
-        </div>
         <div class="row">
-          <div class="feedback-card block-center margin-bottom-80px">
+          <div class="text-center">
+            <h2 class="title-secondary title-secondary_white margin-bottom-lg">
+              Отзывы наших клиентов
+            </h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="feedback-card block-center margin-bottom-lg">
             <figure class="feedback-card__image">
               <img src="img/person-1.jpg" alt="Man" />
               <figcaption class="feedback-card__name">Антон Рябин</figcaption>
             </figure>
             <div class="feedback-card__box">
-              <h3 class="title-third margin-bottom-10px">
+              <h3 class="title-third margin-bottom-sm">
                 Я получил массу впечатлений
               </h3>
               <p class="paragraph">
@@ -291,13 +298,13 @@
             </div>
           </div>
 
-          <div class="feedback-card block-center margin-bottom-80px">
+          <div class="feedback-card block-center margin-bottom-lg">
             <figure class="feedback-card__image">
               <img src="img/person-2.jpg" alt="Woman" />
               <figcaption class="feedback-card__name">Лиза Фролова</figcaption>
             </figure>
             <div class="feedback-card__box">
-              <h3 class="title-third margin-bottom-10px">
+              <h3 class="title-third margin-bottom-sm">
                 Это было великолепно и незабываемо
               </h3>
               <p class="paragraph">
@@ -318,7 +325,7 @@
         <div class="row">
           <div class="booking">
             <div class="booking__form">
-              <h2 class="title-secondary margin-bottom-30px">
+              <h2 class="title-secondary margin-bottom-md">
                 Забронировать тур
               </h2>
 
@@ -327,7 +334,7 @@
                   <input
                     type="text"
                     id="name"
-                    class="form__input margin-bottom-10px"
+                    class="form__input margin-bottom-sm"
                     placeholder="Имя Фамилия"
                     required
                   />
@@ -338,7 +345,7 @@
                   <input
                     type="email"
                     id="email"
-                    class="form__input margin-bottom-10px"
+                    class="form__input margin-bottom-sm"
                     placeholder="Почтовый адрес"
                     required
                   />
@@ -346,7 +353,7 @@
                 </div>
 
                 <div class="form__group">
-                  <div class="form__group-radio margin-bottom-30px">
+                  <div class="form__group-radio margin-bottom-md">
                     <input
                       type="radio"
                       id="tour-1"
@@ -358,7 +365,7 @@
                       Групповой тур</label
                     >
                   </div>
-                  <div class="form__group-radio margin-bottom-30px">
+                  <div class="form__group-radio margin-bottom-md">
                     <input
                       type="radio"
                       id="tour-2"
